[package]
name = "discord_music_bot"
version = "0.2.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
typemap = "0.3"
dashmap = "3.11.4"
toml = "0.5"
serde = "1.0"
threadpool = "1.8"
crossbeam = "0.7"
youtube_dl = "0.5.0"

[dependencies.serenity-lavalink]
git = "https://gitlab.com/nitsuga5124/serenity-lavalink/"
branch = "master"

[dependencies.reqwest]
version = "0.10.6"
features = ["json"]

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]

[dependencies.tokio]
version = "0.2"
features = ["macros","fs","io-util"]
